@@ -19,7 +19,10 @@
 int main( int argc, char * argv [] )
 {
 	QApplication a( argc, argv );
+
+	// current dir needs to be set to the application's dir so that the app finds its files
 	QDir::setCurrent( QApplication::applicationDirPath() );
+
 	MainWindow w;
 	w.show();
 	return a.exec();
